# nominalscript.coq

./: .Makefile.d  .gitignore  .gitmodules  .maps.aux  CoqMakefile.conf  README.md  _CoqProject  configure.sh  nominalscript.opam
Demo/: _CoqProject
NS/: .JsRecord.aux  .Maps.aux  .Misc.aux  .MiscArith.aux  .TypesBase.aux  .TypesInduction.aux  .TypesNotation.aux  .TypesSimpleHelpers.aux  .Typing.aux  .lia.cache  .maps.aux  .nia.cache  HigherOrder.v  Ind2.v  JsRecord.glob  JsRecord.v  Makefile  Makefile.conf  Maps.glob  Misc.glob  Misc.v  MiscArith.glob  MiscArith.v  MiscForall.v  TypesBase.glob  TypesBase.v  TypesInduction.glob  TypesInduction.v  TypesNotation.glob  TypesNotation.v  TypesSimpleHelpers.glob  TypesSimpleHelpers.v  TypesSubtype.v  TypesUnify.v  Typing.glob  Typing.v.bak  Typing.v.bak2  _CoqProject
